# traceMOEsoufan

./: CMakeLists.txt  README.md  app.json
cpk/: io.github.qijieh.tracemoesoufan.cpk
src/: cqfun.cpp  cqfun.hpp  gui.cpp  gui.hpp  main.cpp  myJson.cpp  myJson.hpp  mycurl.cpp  mycurl.hpp
